Styled signup modal, reset password page, and prevented modals from overlapping

--- a/src/pages/ResetPassword/style.css
+++ b/src/pages/ResetPassword/style.css
@@ -1,3 +1,3 @@
 .resetPasswordCard {
-    padding: 2rem
+    padding: 1.5rem 2.5rem;
 }
